fixtures/src/valid/epub3-with-media-overlay/OEBPS/chapter1.smil
<?xml version="1.0" encoding="UTF-8"?>
<smil xmlns="http://www.w3.org/ns/SMIL" xmlns:epub="http://www.idpf.org/2007/ops" version="3.0">
  <body>
    <seq id="seq1" epub:textref="chapter1.xhtml" epub:type="bodymatter">
      <par id="par1">
        <text src="chapter1.xhtml#heading"/>
        <audio src="audio.mp3" clipBegin="0s" clipEnd="1.5s"/>
      </par>
      <par id="par2">
        <text src="chapter1.xhtml#para1"/>
        <audio src="audio.mp3" clipBegin="1.5s" clipEnd="3s"/>
      </par>
    </seq>
  </body>
</smil>
