fixtures/src/invalid/media-overlay-malformed/OEBPS/chapter1.smil
<?xml version="1.0" encoding="UTF-8"?>
<smil xmlns="http://www.w3.org/ns/SMIL" version="3.0">
  <body>
    <seq>
      <par>
        <text src="chapter1.xhtml#p1"
        <audio src="audio.mp3" clipBegin="0s" clipEnd="1s"/>
      </par>
    </seq>
  </body>
</smil>